--- a/.config
+++ b/.config
@@ -4423,7 +4423,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-adblock is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
-# CONFIG_PACKAGE_luci-app-ahcp is not set
+CONFIG_PACKAGE_luci-app-ahcp=y
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-amule is not set
 # CONFIG_PACKAGE_luci-app-aria2 is not set
@@ -4525,8 +4525,8 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-ps3netsrv is not set
 # CONFIG_PACKAGE_luci-app-pushbot is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-# CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
-CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
+CONFIG_PACKAGE_luci-app-qbittorrent_static=y
+# CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
 # CONFIG_PACKAGE_luci-app-qos is not set
 # CONFIG_PACKAGE_luci-app-radicale is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
@@ -4631,6 +4631,31 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-ahcp-ca is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-cs is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-de is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-el is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-en is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-es is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-fr is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-he is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-hu is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-it is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-ja is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-ms is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-no is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-pl is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-pt is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-pt-br is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-ro is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-ru is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-sk is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-sv is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-tr is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-uk is not set
+# CONFIG_PACKAGE_luci-i18n-ahcp-vi is not set
+CONFIG_PACKAGE_luci-i18n-ahcp-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-ahcp-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
@@ -5740,7 +5765,7 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_adbyby=y
 # CONFIG_PACKAGE_addrwatch is not set
 # CONFIG_PACKAGE_adguardhome is not set
-# CONFIG_PACKAGE_ahcpd is not set
+CONFIG_PACKAGE_ahcpd=y
 # CONFIG_PACKAGE_alfred is not set
 # CONFIG_PACKAGE_apcupsd is not set
 # CONFIG_PACKAGE_apcupsd-cgi is not set
@@ -6820,4 +6845,3 @@ CONFIG_PACKAGE_ubi-utils=y
 # end of Xorg
 
 CONFIG_OVERRIDE_PKGS="brook chinadns-ng hysteria kcptun luci-app-passwall naiveproxy shadowsocks-rust shadowsocksr-libev ssocks tcping trojan-go trojan-plus v2ray-core v2ray-plugin xray-core xray-plugin"
-
