--- a/.config
+++ b/.config
@@ -4423,7 +4423,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-adblock is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
-CONFIG_PACKAGE_luci-app-ahcp=y
+# CONFIG_PACKAGE_luci-app-ahcp is not set
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-amule is not set
 # CONFIG_PACKAGE_luci-app-aria2 is not set
@@ -4502,7 +4502,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun=y
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun is not set
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_PDNSD=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
@@ -4525,8 +4525,8 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-ps3netsrv is not set
 # CONFIG_PACKAGE_luci-app-pushbot is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent is not set
-# CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
-CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
+CONFIG_PACKAGE_luci-app-qbittorrent_static=y
+# CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
 # CONFIG_PACKAGE_luci-app-qos is not set
 # CONFIG_PACKAGE_luci-app-radicale is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
@@ -4556,8 +4556,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=y
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER is not set
+# CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY is not set
 CONFIG_PACKAGE_luci-app-udp2raw=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
@@ -4587,9 +4587,9 @@ CONFIG_PACKAGE_luci-app-wol=y
 #
 # 4. Themes
 #
-# CONFIG_PACKAGE_luci-theme-argon is not set
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-# CONFIG_PACKAGE_luci-theme-material is not set
+CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-netgear=y
 # end of 4. Themes
 
@@ -4632,31 +4632,6 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-ahcp-ca is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-cs is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-de is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-el is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-en is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-es is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-fr is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-he is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-hu is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-it is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-ja is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-ms is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-no is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-pl is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-pt is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-pt-br is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-ro is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-ru is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-sk is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-sv is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-tr is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-uk is not set
-# CONFIG_PACKAGE_luci-i18n-ahcp-vi is not set
-CONFIG_PACKAGE_luci-i18n-ahcp-zh-cn=y
-# CONFIG_PACKAGE_luci-i18n-ahcp-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
@@ -5143,7 +5118,7 @@ CONFIG_PACKAGE_dns2socks=y
 # CONFIG_PACKAGE_dnscrypt-proxy is not set
 # CONFIG_PACKAGE_dnscrypt-proxy-resolvers is not set
 # CONFIG_PACKAGE_dnsdist is not set
-CONFIG_PACKAGE_dnsproxy=y
+# CONFIG_PACKAGE_dnsproxy is not set
 # CONFIG_DNSPROXY_COMPRESS_GOPROXY is not set
 CONFIG_DNSPROXY_COMPRESS_UPX=y
 # CONFIG_PACKAGE_drill is not set
@@ -5606,8 +5581,8 @@ CONFIG_HYSTERIA_COMPRESS_GOPROXY=y
 CONFIG_HYSTERIA_COMPRESS_UPX=y
 # end of Configuration
 
-CONFIG_PACKAGE_kcptun-client=y
-CONFIG_PACKAGE_kcptun-config=y
+# CONFIG_PACKAGE_kcptun-client is not set
+# CONFIG_PACKAGE_kcptun-config is not set
 # CONFIG_PACKAGE_kcptun-server is not set
 # CONFIG_PACKAGE_lighttpd is not set
 CONFIG_PACKAGE_microsocks=y
@@ -5645,7 +5620,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
 # CONFIG_PACKAGE_spawn-fcgi is not set
 # CONFIG_PACKAGE_squid is not set
 # CONFIG_PACKAGE_srelay is not set
-CONFIG_PACKAGE_tinyproxy=y
+# CONFIG_PACKAGE_tinyproxy is not set
 # CONFIG_PACKAGE_trojan is not set
 # CONFIG_PACKAGE_trojan-go is not set
 CONFIG_PACKAGE_uhttpd=y
@@ -5733,7 +5708,7 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_adbyby=y
 # CONFIG_PACKAGE_addrwatch is not set
 # CONFIG_PACKAGE_adguardhome is not set
-CONFIG_PACKAGE_ahcpd=y
+# CONFIG_PACKAGE_ahcpd is not set
 # CONFIG_PACKAGE_alfred is not set
 # CONFIG_PACKAGE_apcupsd is not set
 # CONFIG_PACKAGE_apcupsd-cgi is not set
@@ -5767,7 +5742,7 @@ CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_dhcpcd=y
 # CONFIG_PACKAGE_dmapd is not set
 # CONFIG_PACKAGE_dnscrypt-proxy2 is not set
-CONFIG_PACKAGE_dnsforwarder=y
+# CONFIG_PACKAGE_dnsforwarder is not set
 # CONFIG_PACKAGE_dnstap is not set
 # CONFIG_PACKAGE_dnstop is not set
 # CONFIG_PACKAGE_dpdk is not set
@@ -5933,6 +5908,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_samba4-client is not set
 CONFIG_PACKAGE_samba4-libs=y
 CONFIG_PACKAGE_samba4-server=y
+CONFIG_SAMBA4_SERVER_WSDD2=y
 CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_AVAHI=y
 CONFIG_SAMBA4_SERVER_VFS=y
@@ -5985,7 +5961,6 @@ CONFIG_PACKAGE_trojan-plus=y
 # CONFIG_PACKAGE_uacme is not set
 CONFIG_PACKAGE_uclient-fetch=y
 CONFIG_PACKAGE_udp2raw-tunnel=y
-CONFIG_PACKAGE_udpspeeder=y
 CONFIG_PACKAGE_udptunnel=y
 CONFIG_PACKAGE_udpxy=y
 # CONFIG_PACKAGE_ulogd is not set
@@ -6806,4 +6781,4 @@ CONFIG_PACKAGE_ubi-utils=y
 # end of Font-Utils
 # end of Xorg
 
-CONFIG_OVERRIDE_PKGS="brook chinadns-ng hysteria kcptun luci-app-passwall naiveproxy shadowsocks-rust shadowsocksr-libev ssocks tcping trojan-go trojan-plus v2ray-core v2ray-plugin xray-core xray-plugin"
+CONFIG_OVERRIDE_PKGS="brook chinadns-ng hysteria kcptun luci-app-passwall naiveproxy shadowsocks-rust shadowsocksr-libev ssocks tcping trojan-go trojan-plus udpspeeder v2ray-core v2ray-plugin xray-core xray-plugin"
