--- a/.config
+++ b/.config
@@ -2942,8 +2942,8 @@ CONFIG_PACKAGE_perl=y
 #
 # Configuration
 #
-CONFIG_PERL_THREADS=y
-CONFIG_PERL_TESTS=y
+# CONFIG_PERL_THREADS is not set
+# CONFIG_PERL_TESTS is not set
 CONFIG_PERL_NOCOMMENT=y
 # end of Configuration
 
@@ -2985,7 +2985,6 @@ CONFIG_PACKAGE_perl-http-date=y
 # CONFIG_PACKAGE_perl-sub-uplevel is not set
 # CONFIG_PACKAGE_perl-test-harness is not set
 # CONFIG_PACKAGE_perl-test-warn is not set
-# CONFIG_PACKAGE_perl-tests-common is not set
 # CONFIG_PACKAGE_perl-text-csv_xs is not set
 # CONFIG_PACKAGE_perl-try-tiny is not set
 # CONFIG_PACKAGE_perl-uri is not set
