--- a/.config
+++ b/.config
@@ -5609,7 +5609,7 @@ CONFIG_PACKAGE_hysteria=y
 #
 # Configuration
 #
-CONFIG_HYSTERIA_COMPRESS_GOPROXY=y
+# CONFIG_HYSTERIA_COMPRESS_GOPROXY is not set
 CONFIG_HYSTERIA_COMPRESS_UPX=y
 # end of Configuration
 
